Fix UI of checklist descriptions when wrapping
No difference when not wrapping

Ref: ~sircmpwn/hub.sr.ht#37

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -86,6 +86,7 @@
 
   small {
     padding-left: 1.2rem;
+    display: inline-block;
   }
 }
 
